[Mac] Fix cursor when dropping to desktop

Allow mouse cursor to be a green plus when dropping items to desktop

Bug: 905238
Change-Id: I90a6f7156e681271f577f1f604f1d75ada4beba2
Reviewed-on: https://chromium-review.googlesource.com/c/1334994
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609410}
Former-commit-id: 205ec90ee10a0ad48f61600f70bf5c299665b50e